@@ -76,6 +76,7 @@ export(hrule)
 export(htmltools_value)
 export(hyperlink_text)
 export(italic)
+export(line_spacing)
 export(linerange)
 export(lollipop)
 export(merge_at)
