@@ -48,6 +48,7 @@ Other sugar functions for table style:
 \code{\link{empty_blanks}()},
 \code{\link{fontsize}()},
 \code{\link{italic}()},
+\code{\link{line_spacing}()},
 \code{\link{padding}()},
 \code{\link{rotate}()},
 \code{\link{valign}()}
