@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/styles.R
-\name{italic}
-\alias{italic}
-\title{Set italic font}
+\name{line_spacing}
+\alias{line_spacing}
+\title{Set text alignment}
 \usage{
-italic(x, i = NULL, j = NULL, italic = TRUE, part = "body")
+line_spacing(x, i = NULL, j = NULL, space = 1, part = "body")
 }
 \arguments{
 \item{x}{a flextable object}
@@ -13,22 +13,18 @@ italic(x, i = NULL, j = NULL, italic = TRUE, part = "body")
 
 \item{j}{columns selection}
 
-\item{italic}{boolean value}
+\item{space}{space between lines of text, 1 is single line spacing, 2 is double line spacing.}
 
 \item{part}{partname of the table (one of 'all', 'body', 'header', 'footer')}
 }
 \description{
-change font decoration of selected rows and columns of a flextable.
+change text alignment of selected rows and columns of a flextable.
 }
-\section{Illustrations}{
-
-
-\if{html}{\figure{fig_italic_1.png}{options: width=50\%}}
-}
-
 \examples{
-ft <- flextable(head(mtcars))
-ft <- italic(ft, italic = TRUE, part = "header")
+ft <- flextable(head(mtcars)[,3:6])
+ft <- line_spacing(ft, space = 1.6, part = "all")
+ft <- set_table_properties(ft, layout = "autofit")
+ft
 }
 \seealso{
 Other sugar functions for table style: 
@@ -39,7 +35,7 @@ Other sugar functions for table style:
 \code{\link{empty_blanks}()},
 \code{\link{fontsize}()},
 \code{\link{font}()},
-\code{\link{line_spacing}()},
+\code{\link{italic}()},
 \code{\link{padding}()},
 \code{\link{rotate}()},
 \code{\link{valign}()}
